<?xml version="1.0"?>
<package format="2">
  <name>tracy_catkin</name>
  <version>0.0.0</version>
  <description>Catkin wrapper for Tracy Profiler.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/ethz-asl/tracy_catkin</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
